--- a/src/assets/scss/layout/blog/_blog.scss
+++ b/src/assets/scss/layout/blog/_blog.scss
@@ -88,7 +88,7 @@
     font-size: 25px;
     font-weight: 700;
     line-height: 1.3;
-    padding: 20px 0px 18px 20px;
+    padding: 20px 0px 18px 0px;
     a {
       color: var(--black-2);
       &:hover {
@@ -99,4 +99,11 @@
       font-size: 20px;
     }
   }
+  &__content {
+      color: rgba(0,0,0,0.6);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 2;
+      padding-bottom: 10px;
+    }
 }
