--- a/src/assets/scss/layout/testimonial/_testimonial.scss
+++ b/src/assets/scss/layout/testimonial/_testimonial.scss
@@ -3,7 +3,7 @@
 /*----------------------------------------*/
 .testimonial { 
     &__area {
-        background-color: var(--green);
+        background-color: #0c0c0c;
         border-radius: 20px;  
         position: relative;
         margin-left: 10px;
@@ -13,36 +13,36 @@
             margin-right: 0px;
         } 
         .swiper-slide-prev { 
-            opacity: 0.6;
+            opacity: 1;
             position: relative;
-            &::before {
-                position: absolute;
-                top: 0;
-                left: 0px;
-                width: 100%;
-                height: 100%;
-                content: "";
-                z-index: 9;
-                opacity: 0.8;
-                transition: var(--transition); 
-                background: linear-gradient(-90deg, #1A5300 0%, rgba(26, 83, 0, 0.00) 100%); 
-            }
+            // &::before {
+            //     position: absolute;
+            //     top: 0;
+            //     left: 0px;
+            //     width: 100%;
+            //     height: 100%;
+            //     content: "";
+            //     z-index: 9;
+            //     opacity: 0.8;
+            //     transition: var(--transition); 
+            //     background: linear-gradient(-90deg, #1A5300 0%, rgba(26, 83, 0, 0.00) 100%); 
+            // }
         }  
         .swiper-slide-next { 
             position: relative;
-            opacity: 0.6;
-            &::before {
-                position: absolute;
-                top: 0;
-                left: 0px;
-                width: 100%;
-                height: 100%;
-                content: "";
-                z-index: 9;
-                transition: var(--transition);
-                opacity: 0.8;
-                background: linear-gradient(90deg, #1A5300 0%, rgba(26, 83, 0, 0.00) 100%);  
-            }
+            opacity: 1;
+            // &::before {
+            //     position: absolute;
+            //     top: 0;
+            //     left: 0px;
+            //     width: 100%;
+            //     height: 100%;
+            //     content: "";
+            //     z-index: 9;
+            //     transition: var(--transition);
+            //     opacity: 0.8;
+            //     background: linear-gradient(90deg, #1A5300 0%, rgba(26, 83, 0, 0.00) 100%);  
+            // }
         } 
         .swiper-slide-active {
             transition: 2000ms;
@@ -55,6 +55,28 @@
          
     }
 
+    &__tags {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        padding: 20px;
+        background-color: #FF6B2C44;
+        width: fit-content;
+        border-radius: 20px;
+        span {
+            color: #FF6B2C;
+            font-size: 16px;
+            font-weight: 500;
+        }
+    }
+
+    &__tags-container {
+        display: flex;
+        gap: 2rem;
+        padding: 20px 50px;
+    }
+
     &__wrapper {
         position: relative;
         z-index: 999;
@@ -62,9 +84,12 @@
 
     &__title-wrap {
         padding-bottom: 40px;
+        text-align: left;
+        width: 100%;    
         .section-title {
-            max-width: 420px;
-            margin: 0 auto;
+            width: 100%;
+            text-align: left;
+            padding: 0px 50px;
             color: var(--white); 
             span {
                 color: #FFE144;
@@ -73,13 +98,28 @@
                 max-width: 360px;
             } 
         }
+        .section-subtitle {
+            padding: 20px 50px;
+            margin: 0 auto;
+            text-align: left;
+            color: var(--white);
+
+            span {
+                color: #FFE144;
+            }
+
+            @media #{$sm} {
+                max-width: 360px;
+            }
+        }
        
     }
 
     &__client-img {
         img {
+            height: 70px;
             border-radius: 50%;
-            max-width: 65px;
+            width: 70px;
         }
     }
     
@@ -90,7 +130,7 @@
     } 
 
     &__client-name {
-        color: var(--black-2); 
+        color: var(--white); 
         font-size: 25px; 
         font-weight: 700; 
     }
@@ -109,11 +149,13 @@
 
     &__slide {
         border-radius: 30px;
-        background-color: var(--white);
+        background-color: #131313;
         padding: 50px;  
         transition: 2000ms;
+        width: 100%;
+        // max-width: 400px;
+        height: 600px;
         @media #{$sm} {
-            width: 100% !important;
             padding: 20px;
         }   
     }
@@ -129,19 +171,15 @@
     }
 
     &__content {
-        color: var(--black-2); 
-        font-family: var(--font-dm);
-        font-size: 40px;
-        font-style: italic;
+        color: var(--white); 
+        font-family: "Inter";
+        font-size: 16px;
         font-weight: 400; 
-        line-height: 1.3;
+        line-height: 2;
         padding: 30px 0px 30px;
         @media #{$lg} {
-            font-size: 30px;
+            font-size: 14px;
         }
-        @media #{$md} {
-            font-size: 22px;
-        } 
     }
     
     &__btnWrap { 
