--- a/src/assets/scss/layout/course/_course.scss
+++ b/src/assets/scss/layout/course/_course.scss
@@ -22,6 +22,30 @@
       }
     }
 
+    &__area-4{
+        background-color: var(--white);
+        overflow: hidden;
+    
+        .active {
+          background-color: var(--primary);
+          color: var(--white);
+        }
+    
+        .course-title-5 {
+          color: var(--black-2);
+          font-family: var(--font-urbanist);
+          font-size: 40px;
+          font-weight: 700;
+          padding-bottom: 45px;
+    
+          @media #{$sm} {
+            font-size: 32px;
+            padding-bottom: 15px;
+            text-align: center;
+          }
+        }
+    }
+
     .course__sliderActive .course__item {
       // box-shadow: 0px -19px 63px 0px rgba(53, 24, 12, 0.1);
     }
@@ -29,6 +53,19 @@
 
   &__wrapper {
     margin-bottom: 10px;
+  }
+
+  &__wrapper-2{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    min-width: 350px;
+    max-width: calc(100vw/3);
+  }
+
+  &__contentWrap{
+    padding: 40px 10px 10px 10px;
+    box-sizing: border-box;
   }
 
   &__thumb-wrap {
@@ -66,6 +103,19 @@
     transition: 0.7s;
   }
 
+  &__thumb-4{
+      width: 100%;
+      overflow: hidden;
+      border-radius: 20px;
+      position: relative;
+      transform: scale(1.01);
+      transition: 0.7s;
+      min-height: 300px;
+      object-fit: cover;
+      max-width: calc(100vw/3);
+      max-height: 300px;
+    }
+
   &__top-wrap {
     display: flex;
     flex-direction: column;
@@ -100,19 +150,23 @@
         }
       }
     }
-        .section-subtitle {
-          width: 100%;
-          text-align: left;
-          span {
-            display: block;
-          }
-          font-size: 18px;
-          font-weight: 400;
-          @media #{$md} {
-            font-size: 14px;
-            text-align: center;
-          }
-        }
+    .section-subtitle {
+      width: 100%;
+      text-align: left;
+      span {
+        display: block;
+      }
+      font-size: 18px;
+      font-weight: 400;
+      @media #{$md} {
+        font-size: 14px;
+        text-align: center;
+      }
+    }
+
+    .section-title-4{
+      
+    }
   }
   &__tab-wrap {
     display: flex;
@@ -155,6 +209,20 @@
     @media #{$sm} {
       padding: 12px 10px 12px;
     }
+  }
+
+  &__course-btn{
+    border-radius: 15px;
+    background-color: #005120;
+    color: var(--white);
+    display: inline-block;
+    text-align: center;
+    font-family: "Inter";
+    font-size: 16px;
+    font-weight: 700;
+    padding: 13px 25px;
+    width: 100%;
+    margin-top: 20px;
   }
 
   &__wishlist {
@@ -212,6 +280,48 @@
       }
     }
   }
+
+  &__item-2{
+      background-color: var(--white);
+      border-radius: 30px;
+      padding-bottom: 30px;
+      position: relative;
+      margin-bottom: 30px;
+      margin-top: 30px;
+      display: block;
+      // transition: var(--transition);
+      box-shadow: 0px 0px 5px 0px rgba(0,0,0, 0.5);
+      min-width: 300px;
+  
+      @media #{$sm} {
+        width: 100%;
+        margin: 0 auto 30px;
+        display: block;
+      }
+  
+      .btn-enroll {
+        margin-left: 30px;
+        display: inline-block;
+        box-shadow: none;
+  
+        &:hover {
+          .btn-enroll {
+            background-color: var(--primary);
+            color: var(--white);
+          }
+  
+          .btn-enroll-icon {
+            filter: brightness(0) invert(1);
+          }
+        }
+      }
+  
+      &:hover {
+        .course__wishlist {
+          background-color: var(--primary);
+        }
+      }
+    }
 
   &__meta {
     padding: 11px 0px 4px 30px;
@@ -326,6 +436,34 @@
 
   &__btm {
     text-align: center;
+  }
+
+  &__title-4{
+    color: var(--black-2);
+      font-size: 25px;
+      font-weight: 700;
+      line-height: 1.2;
+      padding: 12px 45px 23px 0px;
+    
+      a {
+        color: var(--black-2);
+    
+        &:hover {
+          color: var(--primary);
+        }
+      }
+    
+      @media #{$xl2} {
+        font-size: 23px;
+      }
+    
+      @media #{$lg} {
+        font-size: 17px;
+      }
+  }
+
+  &__content-4{
+    font-size: 16px;
   }
 }
 
