--- a/src/assets/scss/layout/course/_course.scss
+++ b/src/assets/scss/layout/course/_course.scss
@@ -60,12 +60,25 @@
     flex-direction: row;
     gap: 2rem;
     min-width: 350px;
-    max-width: calc(100vw/3);
+    // max-width: calc(100vw/3);
+    @media screen and (max-width: 768px){
+      flex-direction: column;
+    }
   }
 
   &__contentWrap{
     padding: 40px 10px 10px 10px;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &__contentTop{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
   }
 
   &__thumb-wrap {
@@ -114,6 +127,11 @@
       object-fit: cover;
       max-width: calc(100vw/3);
       max-height: 300px;
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        max-width: none;
+        min-width: none;
+      }
     }
 
   &__top-wrap {
@@ -164,10 +182,66 @@
       }
     }
 
-    .section-title-4{
+  }
+  &__featuresWrap{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 20px;
+  }
+
+  &__featureItem{
+      display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        padding: 10px;
+        background-color: #FF6B2C44;
+        width: fit-content;
+        border-radius: 10px;
       
+        p {
+          color: #FF6B2C;
+          font-size: 12px;
+          font-weight: 500;
+        }
+  }
+
+    &__ObjectiveWrap {
+      display: flex;
+      justify-content: start;
+      gap: 10px;
+    }
+
+  &__ObjectiveItem{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 10px;
+    background-color: #00512044;
+    width: fit-content;
+    border-radius: 10px;
+  
+    p {
+      color: #20673C;
+      font-size: 12px;
+      font-weight: 700;
     }
   }
+
+  &__subtitle-4{
+    color: var(--black-2);
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 20px;
+    @media #{$md} {
+      font-size: 14px;
+    }
+  }
+
+
   &__tab-wrap {
     display: flex;
     gap: 8px;
@@ -291,12 +365,19 @@
       display: block;
       // transition: var(--transition);
       box-shadow: 0px 0px 5px 0px rgba(0,0,0, 0.5);
-      min-width: 300px;
+      width: 100%;
+      max-width: calc(100vw/3);
   
       @media #{$sm} {
         width: 100%;
         margin: 0 auto 30px;
         display: block;
+      }
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        max-width: none;
+        min-width: none;
       }
   
       .btn-enroll {
