--- a/src/assets/scss/layout/hero/_hero.scss
+++ b/src/assets/scss/layout/hero/_hero.scss
@@ -37,6 +37,32 @@
     }
   }
 
+    &__area-6 {
+      padding: 10px 0px 0px;
+      margin-top: 100px;
+      height: 100%;
+      position: relative;
+      z-index: 9;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    &__header {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      gap: 20px;
+      height: 100%;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        gap: 50px;
+      }
+    }
+
   &__wrapper {
     display: grid;
     grid-template-columns: 1fr auto;
@@ -68,6 +94,15 @@
     width: 80%;
     height: 100%;
     margin-top: 80px;
+    object-fit: contain;
+    @media #{$md} {
+      display: none;
+    }
+  }
+
+  &__bannerImg{
+    width: 100%;
+    height: 50%;
     object-fit: contain;
     @media #{$md} {
       display: none;
@@ -120,6 +155,20 @@
     }
   }
 
+  &__btn-green{
+    background-color: var(--green);
+    color: var(--white);
+    border-radius: 50px;
+    padding: 15px 30px;
+    font-size: 18px;
+    font-weight: 500;
+    transition: 0.4s;
+    &:hover {
+      background-color: var(--yellow);
+      color: var(--green);
+    }
+  }
+
   &__title {
     color: var(--white);
     font-size: 65px;
@@ -155,6 +204,37 @@
       font-weight: 400;
     }
   }
+
+  &__title-6{
+    color: #767676;
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 1.1;
+    max-width: 660px;
+    text-align: center;
+    margin-bottom: 50px;
+    @media #{$xxl} {
+      font-size: 46px;
+      max-width: 500px;
+    }
+    @media #{$lg} {
+      font-size: 46px;
+      max-width: 400px;
+    }
+    @media #{$md} {
+      font-size: 38px;
+      div {
+        display: inline-block !important;
+      }
+    }
+    @media #{$sm} {
+      font-size: 34px;
+      div {
+        display: inline-block !important;
+      }
+    }
+  }
+
   &__content {
     color: var(--gray-2);
     font-size: 18px;
